feat: successfully migrated to Redux Toolkit Query with OpenAPI code generation
